src/objects/Account_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Partner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationships</relationshipLabel>
        <relationshipName>Account_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_1_formula__c</fullName>
        <formula>Partner_1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner 1 (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationships</relationshipLabel>
        <relationshipName>Account_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_2_formula__c</fullName>
        <formula>Partner_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner 2(formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reverse_Role__c</fullName>
        <formula>CASE(Role__c,
&quot;is a distributor for&quot;, &quot;is a customer of&quot;,
&quot;is a ship to for&quot;, &quot;is a ship to of&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reverse Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>is a distributor for</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is a customer of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>is a ship to for</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_1__c</columns>
        <columns>Role__c</columns>
        <columns>Partner_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-ID-{00000}</displayFormat>
        <label>AR-ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>